--- a/index.html
+++ b/index.html
@@ -4,7 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GCA Geociencias Aplicadas SAS</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+<!-- Fuente similar desde Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+<!-- Estilos personalizados -->
+
+<style>
+  body {
+    font-family: 'Nunito', sans-serif; /* Fuente similar a Eras Bold */
+    background-color: #FFFFFF;
+    color: #594E40;
+  }
+
+  .navbar {
+    background-color: #594E40;
+  }
+
+  .navbar-brand, .nav-link {
+    color: #FFFFFF !important;
+  }
+
+  .header {
+    background-image: url('logo.jpg'); /* Cambia esta ruta si es necesario */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #ffffff;
+    padding: 6rem 2rem;
+    text-align: center;
+  }
+
+  .section-title {
+    color: #594E40;
+  }
+
+  .btn-custom {
+    background-color: #594E40;
+    color: #FFFFFF;
+    border: none;
+  }
+
+  .btn-custom:hover {
+    background-color: #C0B59B;
+    color: #594E40;
+  }
+
+  footer {
+    background-color: #594E40;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 1rem 0;
+  }
+</style>
 </head>
 <body>
 
@@ -29,8 +84,8 @@
 <!-- Hero Section -->
 <section id="inicio" class="py-5 bg-light text-center">
   <div class="container">
-    <h1 class="display-5">Bienvenido a Mi Consultoría Técnica</h1>
-    <p class="lead">Soluciones personalizadas en geología, SIG y análisis técnico especializado.</p>
+    <h1 class="display-5">Bienvenido a GCA Geociencias Aplicadas SAS</h1>
+    <p class="lead">Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
   </div>
 </section>
 
@@ -79,14 +134,14 @@
 <section id="contacto" class="py-5">
   <div class="container">
     <h2 class="mb-4">Contacto</h2>
-    <p>Email: <a href="mailto:consultoria@ejemplo.com">consultoria@ejemplo.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/573000000000">+57 300 000 0000</a></p>
+    <p>Email: <a href="mailto:gcageociencias@gmail.com">consultoria@ejemplo.com</a></p>
+    <p>WhatsApp: <a href="https://wa.me/573057287714">+57 305 728 7714</a></p>
   </div>
 </section>
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3">
-  &copy; 2025 Mi Consultoría Técnica. Todos los derechos reservados.
+  &copy; 2025 GCA Geociencias Aplicadas SAS. Todos los derechos reservados.
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
