--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <section id="contacto" class="py-5">
   <div class="container">
     <h2 class="mb-4">Contacto</h2>
-    <p>Email: <a href="mailto:gcageociencias@gmail.com">consultoria@ejemplo.com</a></p>
+    <p>Email: <a href="mailto:gcageociencias@gmail.com">gcageociencias@gmail.com</a></p>
     <p>WhatsApp: <a href="https://wa.me/573057287714">+57 305 728 7714</a></p>
   </div>
 </section>
