--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   }
 
   .header {
-    background-image: url('logo.jpg'); /* Cambia esta ruta si es necesario */
+    background-image: url('GCA_fondo.png'); /* Cambia esta ruta si es necesario */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
