--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
     </div>
   </section>
 
-  <section id="contacto" class="contacto text-center">
-    <h2>Contacto</h2>
-    <p>¿Tienes un proyecto o necesitas asesoría? Escríbenos a:</p>
-    <p><a href="mailto:contacto@gcageociencias.com" class="text-dark">contacto@gcageociencias.com</a></p>
+ <!-- Contacto -->
+<section id="contacto" class="py-5">
+  <div class="container">
+    <h2 class="mb-4">Contacto</h2>
+    <p>Email: <a href="mailto:gcageociencias@gmail.com">consultoria@ejemplo.com</a></p>
+    <p>WhatsApp: <a href="https://wa.me/573057287714">+57 305 728 7714</a></p>
+  </div>
   </section>
 
   <footer class="text-center py-3" style="background-color: #594E40; color: white;">
