--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
   <header class="header">
-    <img src="GCA_fondo.png" alt="Logo GCA">
+    <img src="logo.jpg" alt="Logo GCA">
     <h1>Geociencias Aplicadas</h1>
     <p class="subtitulo">Consultoría Geológica</p>
     <a href="#nosotros" class="btn btn-nosotros">Nosotros</a>
