--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
   <header class="header">
-    <img src="GCA_fondo.png" alt="Logo GCA">
+    <img src="logo.jpg" alt="Logo GCA">
     <h1>Geociencias Aplicadas</h1>
     <p class="subtitulo">Consultoría Geológica</p>
     <a href="#nosotros" class="btn btn-nosotros">Nosotros</a>
@@ -112,7 +112,7 @@
   <section id="contacto" class="contacto text-center">
     <h2>Contacto</h2>
     <p>¿Tienes un proyecto o necesitas asesoría? Escríbenos a:</p>
-    <p><a href="mailto:contacto@gcageociencias.com" class="text-dark">contacto@gcageociencias.com</a></p>
+    <p><a href="mailto:contacto@gcageociencias.com" class="text-dark">gcageociencias@gmail.com</a></p>
   </section>
 
   <footer class="text-center py-3" style="background-color: #594E40; color: white;">
