--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </nav>
 
 <header id="inicio" class="header">
-  <img src="logo.png" alt="Logo GCA">
+  <img src="logo.jpg" alt="Logo GCA">
   <h1>Geociencias Aplicadas</h1>
   <p class="subtitulo">Consultoría Geológica</p>
 </header>
