--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#inicio">
-      <img src="logo.png" alt="Logo" width="50">
+      <img src="logo.jpg" alt="Logo" width="50">
       GCA
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
