--- a/index.html
+++ b/index.html
@@ -1,172 +1,202 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GCA - Geociencias Aplicadas SAS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Arial', sans-serif;
       background-color: #ffffff;
       color: #594E40;
     }
+
     .navbar {
-      background-color: #C0B59B;
+      background: linear-gradient(to right, #594E40, #C0B59B);
+      padding: 0.5rem 1rem;
     }
-    .navbar-nav .nav-link {
-      color: #594E40;
-      font-weight: bold;
+
+    .navbar-brand img {
+      height: 50px;
+      margin-right: 10px;
     }
-    .header {
-      background-color: #C0B59B;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    .header img {
-      max-width: 150px;
-      margin-bottom: 1rem;
-    }
-    .header h1 {
-      font-weight: bold;
-      font-size: 2rem;
-    }
+
     .banner {
-      background: url('banner.jpg') no-repeat center center/cover;
-      height: 100vh;
+      width: 100%;
+      height: 90vh;
+      background-image: url('banner.jpg');
+      background-size: cover;
+      background-position: center;
     }
-    .seccion {
-      padding: 2rem 1rem;
+
+    .services {
+      padding: 50px 20px;
+      background-color: #F5F5F5;
+      text-align: center;
     }
-    .icono-servicio {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      color: white;
+
+    .services .card {
+      border: none;
+      background-color: #ffffff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
     }
-    .bloque-servicio {
-      background-color: #594E40;
+
+    .services .card:hover {
+      transform: translateY(-10px);
+    }
+
+    .footer {
+      background: #594E40;
       color: white;
       text-align: center;
-      padding: 2rem 1rem;
-      border-radius: 8px;
-      margin-bottom: 1rem;
+      padding: 20px 0;
     }
-    .contacto {
-      background-color: #C0B59B;
-      padding: 2rem;
-      color: #594E40;
-    }
-    .whatsapp {
+
+    .whatsapp-button {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      z-index: 1000;
-    }
-    .whatsapp img {
+      background: linear-gradient(to right, #594E40, #C0B59B);
+      color: white;
+      border-radius: 50%;
       width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 30px;
+      z-index: 1000;
     }
   </style>
 </head>
+
 <body>
-
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#inicio">
-      <img src="logo.jpg" alt="Logo" width="50">
-      GCA
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#inicio">Inicio</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#mineria">Minería</a></li>
-            <li><a class="dropdown-item" href="#hidrocarburos">Hidrocarburos</a></li>
-            <li><a class="dropdown-item" href="#geofisica">Geofísica</a></li>
-            <li><a class="dropdown-item" href="#geotecnia">Geotecnia</a></li>
-            <li><a class="dropdown-item" href="#agua">Agua y Medio Ambiente</a></li>
-            <li><a class="dropdown-item" href="#sig">SIG</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Proyectos</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#proyectos">Listado de Proyectos</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contacto">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<header id="inicio" class="header">
-  <img src="logo.jpg" alt="Logo GCA">
-  <h1>Geociencias Aplicadas</h1>
-  <p class="subtitulo">Consultoría Geológica</p>
-</header>
-
-<section class="banner"></section>
-
-<section id="servicios" class="container seccion">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="bloque-servicio" id="mineria">
-        <h4>Minería</h4>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="logo.jpg" alt="Logo GCA">
+        <span>GCA - Geociencias Aplicadas SAS</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="mineria.html">Minería</a></li>
+              <li><a class="dropdown-item" href="hidrocarburos.html">Hidrocarburos</a></li>
+              <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
+              <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
+              <li><a class="dropdown-item" href="agua.html">Agua y Medio Ambiente</a></li>
+              <li><a class="dropdown-item" href="sig.html">SIG</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="proyectos.html">Proyectos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contáctanos</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="bloque-servicio" id="hidrocarburos">
-        <h4>Hidrocarburos</h4>
+  </nav>
+
+  <!-- Banner -->
+  <div class="banner"></div>
+
+  <!-- Sección de Servicios -->
+  <section class="services">
+    <div class="container">
+      <h2 class="mb-5">Nuestros Servicios</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <a href="mineria.html">
+            <div class="card p-4">
+              <img src="icon-mineria.png" class="card-img-top" alt="Minería">
+              <div class="card-body">
+                <h5 class="card-title">Minería</h5>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="hidrocarburos.html">
+            <div class="card p-4">
+              <img src="icon-hidrocarburos.png" class="card-img-top" alt="Hidrocarburos">
+              <div class="card-body">
+                <h5 class="card-title">Hidrocarburos</h5>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="geofisica.html">
+            <div class="card p-4">
+              <img src="icon-geofisica.png" class="card-img-top" alt="Geofísica">
+              <div class="card-body">
+                <h5 class="card-title">Geofísica</h5>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="geotecnia.html">
+            <div class="card p-4">
+              <img src="icon-geotecnia.png" class="card-img-top" alt="Geotecnia">
+              <div class="card-body">
+                <h5 class="card-title">Geotecnia</h5>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="agua.html">
+            <div class="card p-4">
+              <img src="icon-agua.png" class="card-img-top" alt="Agua y Medio Ambiente">
+              <div class="card-body">
+                <h5 class="card-title">Agua y Medio Ambiente</h5>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="sig.html">
+            <div class="card p-4">
+              <img src="icon-sig.png" class="card-img-top" alt="SIG">
+              <div class="card-body">
+                <h5 class="card-title">SIG</h5>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="bloque-servicio" id="geofisica">
-        <h4>Geofísica</h4>
-      </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>© 2025 GCA - Geociencias Aplicadas SAS</p>
     </div>
-    <div class="col-md-4">
-      <div class="bloque-servicio" id="geotecnia">
-        <h4>Geotecnia</h4>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="bloque-servicio" id="agua">
-        <h4>Agua y Medio Ambiente</h4>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="bloque-servicio" id="sig">
-        <h4>SIG</h4>
-      </div>
-    </div>
-  </div>
-</section>
+  </footer>
 
-<section id="contacto" class="contacto text-center">
-  <h2>Contacto</h2>
-  <p>¿Tienes un proyecto o necesitas asesoría? Escríbenos a:</p>
-  <p><a href="mailto:contacto@gcageociencias.com" class="text-dark">contacto@gcageociencias.com</a></p>
-</section>
+  <!-- Botón WhatsApp -->
+  <a href="https://wa.me/tu_numero" class="whatsapp-button" target="_blank">
+    <i class="bi bi-whatsapp"></i>
+  </a>
 
-<a href="https://wa.me/573001112233" target="_blank" class="whatsapp">
-  <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp">
-</a>
-
-<footer class="text-center py-3" style="background-color: #594E40; color: white;">
-  <p>&copy; 2025 GCA - Geociencias Aplicadas SAS</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
