--- a/contacto.html
+++ b/contacto.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nombre del Servicio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contáctanos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Eras+Bold+ITC&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Eras Bold ITC', sans-serif;
@@ -32,21 +31,38 @@
 </head>
 <body>
   <div class="banner">
-    <h1>Nombre del Servicio</h1>
+    <h1>Contáctanos</h1>
   </div>
 
   <div class="container py-5">
-    <h2>Descripción del Servicio</h2>
-    <p>Aquí puedes escribir la información detallada sobre el servicio, la historia, los proyectos realizados, tecnologías utilizadas, beneficios, etc.</p>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <h2>Ubicación</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.914551287905!2d-74.0720922846756!3d4.710988743682147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99b6aab89627%3A0x578f2d11e77b928b!2sBogot%C3%A1%2C%20Colombia!5e0!3m2!1ses-419!2sus!4v1617763546123!5m2!1ses-419!2sus" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <p class="mt-3">Correo: contacto@ejemplo.com</p>
+      </div>
 
-    <h3>Proyectos Relacionados</h3>
-    <ul>
-      <li>Proyecto 1</li>
-      <li>Proyecto 2</li>
-      <li>Proyecto 3</li>
-    </ul>
+      <div class="col-md-6">
+        <h2>Formulario de contacto</h2>
+        <form>
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico</label>
+            <input type="email" class="form-control" id="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje</label>
+            <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-volver">Enviar</button>
+        </form>
+      </div>
+    </div>
 
-    <a href="index.html" class="btn btn-volver mt-4">← Volver al inicio</a>
+    <a href="index.html" class="btn btn-volver mt-5">← Volver al inicio</a>
   </div>
 </body>
 </html>
