--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #ffffff;
+      font-family: 'Nunito', sans-serif; /* Fuente similar a Eras Bold */
+      background-color: #FFFFFF;
       color: #594E40;
     }
 
