--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               <img src="icon-geofisica.png" class="card-img-top" alt="Geofísica">
               <div class="card-body">
                 <h5 class="card-title">Geofísica</h5>
+                <p class="card-text">Exploración y levantamiento geofísico.</p>
               </div>
             </div>
           </a>
@@ -156,6 +157,7 @@
               <img src="icon-geotecnia.png" class="card-img-top" alt="Geotecnia">
               <div class="card-body">
                 <h5 class="card-title">Geotecnia</h5>
+                <p class="card-text">Asesorías en exploración, geotecnia y análisis estructural.</p>
               </div>
             </div>
           </a>
@@ -166,6 +168,7 @@
               <img src="icon-agua.png" class="card-img-top" alt="Agua y Medio Ambiente">
               <div class="card-body">
                 <h5 class="card-title">Agua y Medio Ambiente</h5>
+                <p class="card-text">Asesorías en análisis ambientales en el componente geo-ecosistémico.</p>
               </div>
             </div>
           </a>
@@ -176,6 +179,7 @@
               <img src="icon-sig.png" class="card-img-top" alt="SIG">
               <div class="card-body">
                 <h5 class="card-title">SIG</h5>
+                <p class="card-text">Diseño e implementación de sistemas de información geográfica.</p>
               </div>
             </div>
           </a>
