--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <title>GCA - Geociencias Aplicadas SAS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Nunito', sans-serif; /* Fuente similar a Eras Bold */
+      font-family: 'Poppins', sans-serif; /* Fuente similar a Eras Bold */
       background-color: #FFFFFF;
       color: #594E40;
     }
@@ -74,12 +75,13 @@
   </style>
 </head>
 
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="logo.jpg" alt="Logo GCA">
+        <img src="logo.jpg" alt="Logo GCA" style="height: 100px;">
         <span>GCA - Geociencias Aplicadas SAS</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -112,9 +114,18 @@
     </div>
   </nav>
 
-  <!-- Banner -->
+  <!-- Sección Banner -->
   <div class="banner"></div>
 
+  <!-- Sección de saludo y descripcción -->
+  <section class="bienvenida text-center py-5">
+      <div class="container">
+          <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
+          <p>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
+      </div>
+  </section>
+
+ 
   <!-- Sección de Servicios -->
   <section class="services">
     <div class="container">
