--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GCA - Geociencias Aplicadas SAS</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  
+  <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  
   <style>
     body {
-      font-family: 'Poppins', sans-serif; /* Fuente similar a Eras Bold */
+      font-family: 'Poppins', sans-serif;
       background-color: #FFFFFF;
       color: #594E40;
     }
 
+     h1, h2, h3, h4, h5, h6 {
+      font-weight: 600; /* Letras más gruesas para los títulos */
+    }
+
+    p {
+      font-weight: 400;
+    }
+    
     .navbar {
       background: linear-gradient(to right, #594E40, #C0B59B);
       padding: 0.5rem 1rem;
@@ -81,7 +96,7 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="logo.jpg" alt="Logo GCA" style="height: 100px;">
+        <img src="logo.jpg" alt="Logo GCA">
         <span>GCA - Geociencias Aplicadas SAS</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
