--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <!-- Sección superior del logo -->
   <div class="logo-container text-center py-3">
-    <img src="ruta-de-tu-logo.png" alt="Logo GCA" class="logo-img">
+    <img src="logo.jpg" alt="Logo GCA" class="logo-img">
   </div>
 
   <!-- Menú de navegación -->
