--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contactenos</a></li>
         </ul>
       </div>
     </div>
