--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       <div class="container">
           <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
           <p>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
+          
       </div>
   </section>
  
@@ -156,6 +157,7 @@
               <img src="icon-mineria.png" class="card-img-top" alt="Minería">
               <div class="card-body">
                 <h5 class="card-title">Minería</h5>
+                <p class="card-text">Exploramos, evaluamos y optimizamos recursos minerales para impulsar proyectos sostenibles y rentables.</p>
               </div>
             </div>
           </a>
@@ -165,7 +167,8 @@
             <div class="card p-4">
               <img src="icon-hidrocarburos.png" class="card-img-top" alt="Hidrocarburos">
               <div class="card-body">
-                <h5 class="card-title">Hidrocarburos</h5>
+                <h5 class="card-title">Hidrogeología e Hidrología</h5>
+                <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos.</p>
               </div>
             </div>
           </a>
@@ -176,7 +179,7 @@
               <img src="icon-geofisica.png" class="card-img-top" alt="Geofísica">
               <div class="card-body">
                 <h5 class="card-title">Agua y Medio Ambiente</h5>
-                <p class="card-text">Asesorías en análisis ambientales en el componente geo-ecosistémico.</p>                
+                <p class="card-text">Gestionamos los recursos hídricos y ambientales desde el geo-ecosistema para garantizar el desarrollo sostenible y el cumplimiento normativo..</p>                
               </div>
             </div>
           </a>
@@ -187,7 +190,7 @@
               <img src="icon-geotecnia.png" class="card-img-top" alt="Geotecnia">
               <div class="card-body">
                 <h5 class="card-title">Geotecnia</h5>
-                <p class="card-text">Asesorías en exploración, geotecnia y análisis estructural.</p>
+                <p class="card-text">Evaluamos las condiciones del terreno para diseñar soluciones seguras y eficientes en proyectos de ingeniería, exploración, geotecnia y análisis estructural.</p>
               </div>
             </div>
           </a>
@@ -211,7 +214,7 @@
               <img src="icon-sig.png" class="card-img-top" alt="SIG">
               <div class="card-body">
                 <h5 class="card-title">Geofísica</h5>
-                <p class="card-text">Exploración y levantamiento geofísico.</p>                
+                <p class="card-text">Aplicamos métodos geofísicos avanzados para revelar las estructuras ocultas del subsuelo.</p>                
               </div>
             </div>
           </a>
