--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Servicios</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="servicio-mineria.html">Minería</a></li>
-              <li><a class="dropdown-item" href="servicio-hidrocarburos.html">Hidrocarburos</a></li>
+              <li><a class="dropdown-item" href="servicio-mineria.html">Geotermia</a></li>
+              <li><a class="dropdown-item" href="servicio-hidrocarburos.html">Hidrogeología e Hidrología</a></li>
               <li><a class="dropdown-item" href="servicio-geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="servicio-geotecnia.html">Geotecnia</a></li>
-              <li><a class="dropdown-item" href="servicio-agua.html">Agua y Medio Ambiente</a></li>
+              <li><a class="dropdown-item" href="servicio-agua.html">Medio Ambiente y Geo-Ecosistema</a></li>
               <li><a class="dropdown-item" href="servicio-sig.html">SIG</a></li>
             </ul>
           </li>
@@ -142,7 +142,7 @@
       <div class="container">
           <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
           <p>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
-          
+          <p></p>
       </div>
   </section>
  
@@ -152,33 +152,33 @@
       <h2 class="mb-5">Nuestros Servicios</h2>
       <div class="row g-4">
         <div class="col-md-4">
-          <a href="mineria.html">
+          <a href="geotermia.html">
             <div class="card p-4">
-              <img src="icon-mineria.png" class="card-img-top" alt="Minería">
+              <img src="icon-geotermia.png" class="card-img-top" alt="Minería">
               <div class="card-body">
-                <h5 class="card-title">Minería</h5>
-                <p class="card-text">Exploramos, evaluamos y optimizamos recursos minerales para impulsar proyectos sostenibles y rentables.</p>
+                <h5 class="card-title">Geotermia</h5>
+                <p class="card-text">Exploramos y evaluamos recursos geotérmicos para impulsar proyectos de energía limpia y sostenible.</p>
               </div>
             </div>
           </a>
         </div>
         <div class="col-md-4">
-          <a href="hidrocarburos.html">
+          <a href="recursos_hidricos.html">
             <div class="card p-4">
-              <img src="icon-hidrocarburos.png" class="card-img-top" alt="Hidrocarburos">
+              <img src="icon-agua.png" class="card-img-top" alt="Hidrocarburos">
               <div class="card-body">
-                <h5 class="card-title">Hidrogeología e Hidrología</h5>
-                <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos.</p>
+                <h5 class="card-title">Recursos Hídricos</h5>
+                <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
               </div>
             </div>
           </a>
         </div>
         <div class="col-md-4">
-          <a href="geofisica.html">
+          <a href="ambiente.html">
             <div class="card p-4">
-              <img src="icon-geofisica.png" class="card-img-top" alt="Geofísica">
+              <img src="icon-ambiente.png" class="card-img-top" alt="Geofísica">
               <div class="card-body">
-                <h5 class="card-title">Agua y Medio Ambiente</h5>
+                <h5 class="card-title">Medio Ambiente y Geo-Ecossitema</h5>
                 <p class="card-text">Gestionamos los recursos hídricos y ambientales desde el geo-ecosistema para garantizar el desarrollo sostenible y el cumplimiento normativo..</p>                
               </div>
             </div>
@@ -196,22 +196,20 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="agua.html">
+          <a href="sig.html">
             <div class="card p-4">
-              <img src="icon-agua.png" class="card-img-top" alt="Agua y Medio Ambiente">
+              <img src="icon-sig.png" class="card-img-top" alt="Agua y Medio Ambiente">
               <div class="card-body">
                 <h5 class="card-title">SIG</h5>
-                <p class="card-text">Diseño e implementación de sistemas de información geográfica.</p>
-                <h5 class="card-title">Geofísica</h5>
-                <p class="card-text">Exploración y levantamiento geofísico.</p>                
+                <p class="card-text">Diseño e implementación de sistemas de información geográfica.</p>                               
               </div>
             </div>
           </a>
         </div>
         <div class="col-md-4">
-          <a href="sig.html">
+          <a href="geofisica.html">
             <div class="card p-4">
-              <img src="icon-sig.png" class="card-img-top" alt="SIG">
+              <img src="icon-geofisica.png" class="card-img-top" alt="SIG">
               <div class="card-body">
                 <h5 class="card-title">Geofísica</h5>
                 <p class="card-text">Aplicamos métodos geofísicos avanzados para revelar las estructuras ocultas del subsuelo.</p>                
