--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Servicios</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="servicio-mineria.html">Geotermia</a></li>
-              <li><a class="dropdown-item" href="servicio-hidrocarburos.html">Hidrogeología e Hidrología</a></li>
+              <li><a class="dropdown-item" href="servicio-hidrocarburos.html">Recursos Hídricos</a></li>
               <li><a class="dropdown-item" href="servicio-geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="servicio-geotecnia.html">Geotecnia</a></li>
               <li><a class="dropdown-item" href="servicio-agua.html">Medio Ambiente y Geo-Ecosistema</a></li>
