--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="col-md-4">
           <a href="recursos_hidricos.html">
             <div class="card p-4">
-              <img src="icon-agua.png" class="card-img-top" alt="Hidrocarburos">
+              <img src="icon-recursos_hidricos.png" class="card-img-top" alt="Hidrocarburos">
               <div class="card-body">
                 <h5 class="card-title">Recursos Hídricos</h5>
                 <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
