--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="col-md-4">
           <a href="geotermia.html">
             <div class="card p-4">
-              <img src="icon-geotermia.png" class="card-img-top" alt="Minería">
+              <img src="icon-geotermia.png" class="card-img-top" alt="Geotermia">
               <div class="card-body">
                 <h5 class="card-title">Geotermia</h5>
                 <p class="card-text">Exploramos y evaluamos recursos geotérmicos para impulsar proyectos de energía limpia y sostenible.</p>
@@ -165,7 +165,7 @@
         <div class="col-md-4">
           <a href="recursos_hidricos.html">
             <div class="card p-4">
-              <img src="icon-recursos_hidricos.png" class="card-img-top" alt="Hidrocarburos">
+              <img src="icon-recursos_hidricos.png" class="card-img-top" alt="Recursos Hídricos">
               <div class="card-body">
                 <h5 class="card-title">Recursos Hídricos</h5>
                 <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
@@ -176,7 +176,7 @@
         <div class="col-md-4">
           <a href="ambiente.html">
             <div class="card p-4">
-              <img src="icon-ambiente.png" class="card-img-top" alt="Geofísica">
+              <img src="icon-ambiente.png" class="card-img-top" alt="Geo-Ecosistema">
               <div class="card-body">
                 <h5 class="card-title">Medio Ambiente y Geo-Ecossitema</h5>
                 <p class="card-text">Gestionamos los recursos hídricos y ambientales desde el geo-ecosistema para garantizar el desarrollo sostenible y el cumplimiento normativo..</p>                
@@ -198,7 +198,7 @@
         <div class="col-md-4">
           <a href="sig.html">
             <div class="card p-4">
-              <img src="icon-sig.png" class="card-img-top" alt="Agua y Medio Ambiente">
+              <img src="icon-sig.png" class="card-img-top" alt="SIG">
               <div class="card-body">
                 <h5 class="card-title">SIG</h5>
                 <p class="card-text">Diseño e implementación de sistemas de información geográfica.</p>                               
@@ -209,7 +209,7 @@
         <div class="col-md-4">
           <a href="geofisica.html">
             <div class="card p-4">
-              <img src="icon-geofisica.png" class="card-img-top" alt="SIG">
+              <img src="icon-geofisica.png" class="card-img-top" alt="Geofísica">
               <div class="card-body">
                 <h5 class="card-title">Geofísica</h5>
                 <p class="card-text">Aplicamos métodos geofísicos avanzados para revelar las estructuras ocultas del subsuelo.</p>                
