--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="recursos_hidricos.html">
+          <a href="agua.html">
             <div class="card p-4">
               <img src="icon-recursos_hidricos.png" class="card-img-top" alt="Recursos Hídricos">
               <div class="card-body">
