--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="card p-4">
               <img src="icon-ambiente.png" class="card-img-top" alt="Geo-Ecosistema">
               <div class="card-body">
-                <h5 class="card-title">Medio Ambiente y Geo-Ecossitema</h5>
+                <h5 class="card-title">Medio Ambiente y Geo-Ecosistema</h5>
                 <p class="card-text">Gestionamos los recursos hídricos y ambientales desde el geo-ecosistema para garantizar el desarrollo sostenible y el cumplimiento normativo..</p>                
               </div>
             </div>
