--- a/geotermia.html
+++ b/geotermia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nombre del Servicio</title>
+  <title>Geotermia, H2 y energías limpias</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Eras+Bold+ITC&display=swap" rel="stylesheet">
   <style>
@@ -32,12 +32,12 @@
 </head>
 <body>
   <div class="banner">
-    <h1>Nombre del Servicio</h1>
+    <h1>Exploración</h1>
   </div>
 
   <div class="container py-5">
     <h2>Descripción del Servicio</h2>
-    <p>Aquí puedes escribir la información detallada sobre el servicio, la historia, los proyectos realizados, tecnologías utilizadas, beneficios, etc.</p>
+    <p>Cartografía geológica, levantamiento de columnas, cálculo de reservas, caracterización litológica, petrografía, muestreo de sediento activo, rocas y análisis de aguas y asesoría en geoquímica.</p>
 
     <h3>Proyectos Relacionados</h3>
     <ul>
