--- a/geotermia.html
+++ b/geotermia.html
@@ -32,11 +32,11 @@
 </head>
 <body>
   <div class="banner">
-    <h1>Exploración</h1>
+    <h1>Geotermia, H2 y energías limpias</h1>
   </div>
 
   <div class="container py-5">
-    <h2>Descripción del Servicio</h2>
+    <h2>Exploración</h2>
     <p>Cartografía geológica, levantamiento de columnas, cálculo de reservas, caracterización litológica, petrografía, muestreo de sediento activo, rocas y análisis de aguas y asesoría en geoquímica.</p>
 
     <h3>Proyectos Relacionados</h3>
