--- a/geotermia.html
+++ b/geotermia.html
@@ -33,13 +33,22 @@
 <body>
   <div class="banner">
     <h1>Geotermia, H2 y energías limpias</h1>
+    <p>Aprovechamos el calor de la Tierra mediante estudios avanzados para impulsar proyectos de energía geotérmica de forma eficiente y sostenible.</p>
   </div>
 
   <div class="container py-5">
     <h2>Exploración</h2>
-    <p>Cartografía geológica, levantamiento de columnas, cálculo de reservas, caracterización litológica, petrografía, muestreo de sediento activo, rocas y análisis de aguas y asesoría en geoquímica.</p>
-
-    <h3>Proyectos Relacionados</h3>
+    <p>Realizamos cartografía geológica, levantamiento de columnas, caracterización litológica y petrografía, complementadas con muestreo de sedimentos activos, análisis de aguas y asesoría geoquímica para identificar el potencial geotérmico de la zona.</p>
+    <h3>Topografía</h3>
+    <p>Desarrollamos levantamientos topográficos precisos que permiten planificar y ejecutar proyectos geotérmicos de manera segura y eficiente.</p>
+    <h4>Geofísica</h4>
+    <p>Aplicamos técnicas de geoeléctrica, magnetometría y gravimetría para determinar la estructura y características físicas del subsuelo en proyectos geotérmicos.</p>
+    <h5>GIS aplicado a minería</h5>
+    <p>Integración de datos espaciales y geológicos para el análisis, modelamiento y toma de decisiones en proyectos de energía geotérmica.</p>
+    <h6>Perforaciones someras<h6>
+    <p>Ejecutamos perforaciones poco profundas para validar zonas de interés geotérmico y para la instalación de equipos de monitoreo térmico.</p>
+    
+    <h7>Proyectos Relacionados</h7>
     <ul>
       <li>Proyecto 1</li>
       <li>Proyecto 2</li>
