--- a/agua.html
+++ b/agua.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nombre del Servicio</title>
+  <title>Recursos Hídricos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Eras+Bold+ITC&display=swap" rel="stylesheet">
   <style>
@@ -32,14 +32,23 @@
 </head>
 <body>
   <div class="banner">
-    <h1>Nombre del Servicio</h1>
+    <h1>RECURSOS HÍDRICOS (Hidrogeología e Hidrología)</h1>
   </div>
 
   <div class="container py-5">
-    <h2>Descripción del Servicio</h2>
-    <p>Aquí puedes escribir la información detallada sobre el servicio, la historia, los proyectos realizados, tecnologías utilizadas, beneficios, etc.</p>
+    <h2>Exploración</h2>
+    <p>Elaboramos cartografía geológica, caracterización litológica, análisis geoquímicos de aguas, muestreo y modelación de cuencas para evaluar la disponibilidad y calidad de recursos hídricos.</p>
+    <h3>Geofísica</h3>
+    <p>Aplicamos métodos geoeléctricos, magnetométricos, gravimétricos y sísmicos para identificar acuíferos, estructuras subterráneas y características hidrogeológicas.</p>
+    <h4>GIS aplicado a hidrogeología</h4>
+    <p>Procesamos y analizamos datos geoespaciales para apoyar la gestión, monitoreo y conservación de recursos hídricos.</p>
+    <h5>Análisis geomecánico de reservorios</h5>
+    <p>Evaluamos la estabilidad y comportamiento de reservorios de agua subterránea para garantizar su aprovechamiento sostenible.</p>
+    <h6>Acotamiento de Rondas Hídricas</h6>
+    <p>Analisis geológico y geomorfológico de los cuerpos de agua, dinámica aluvial, cambios de cauce, entre otros.</p>
+            
 
-    <h3>Proyectos Relacionados</h3>
+    <h7>Proyectos Relacionados</h7>
     <ul>
       <li>Proyecto 1</li>
       <li>Proyecto 2</li>
